@@ -1,4 +1,4 @@
-# version: 20190317110401
+# version: 20190327231401
 users-user	User ID	<QXZ>This field is where you put the users ID number, can be up to 8 digits in length, Must be at least 2 characters in length.</QXZ>
 users-pass	Password	<QXZ>This field is where you put the users password. Must be at least 2 characters in length. A medium strength user password will be at least 10 characters in length, and a strong user password will be at least 20 characters in length and have letters as well as at least one number. It is recommended that you use a longer password if possible, stringing together several unrelated words with no spaces, and a number somewhere in the string. The maximum size of a password is 100 characters.</QXZ>
 users-force_change_password	Force Change Password	<QXZ>If this option is set to Y then the user will be prompted to change their password the next time they log in to the administration webpage. Default is N.</QXZ>
@@ -1118,7 +1118,7 @@ screen_colors-active	Active	<QXZ>Set whether the screen color set is active or n
 settings_containers	Settings Containers allow for an easy way to add, modify and delete large configurations of settings, or for elements like email templates to be used by PHP and Perl scripts within the codebase.	<B><QXZ>Settings Containers allow for an easy way to add, modify and delete large configurations of settings, or for elements like email templates to be used by PHP and Perl scripts within the codebase.</QXZ></B>
 settings_containers-container_id	Container ID	<QXZ>This field needs to be at least 2 characters in length and no more than 40 characters in length, no spaces or special characters. This is the ID that will be used to identify the Settings Container throughout the system.</QXZ>
 settings_containers-container_notes	Container Notes	<QXZ>This is the descriptive name of the Settings Container entry.</QXZ>
-settings_containers-container_type	Container Type	<QXZ>This is the type of Container entry. This is only used for categorization.</QXZ>
+settings_containers-container_type	Container Type	<QXZ>This is the type of Container entry. This is used primarily for categorization and to show only certain containers in certain places. There is also a special container type -READ_ONLY- that is used and updated by external processes that cannot have the container entry modified within the admin screens. Default is OTHER.</QXZ>
 settings_containers-user_group	Admin User Group	<QXZ>This is the administrative user group for this record, this allows admin viewing of this record restricted by user group. Default is --ALL-- which allows any admin user to view this record.</QXZ>
 settings_containers-container_entry	Container Entry	<QXZ>This is where you put the contents of the settings that you want in this container.</QXZ>
 auto_reports	Automated Reports allow for a simplified way of configuring reports to be run on a scheduled and recurring basis, and to have the results sent by email or uploaded to an FTP server.	<B><QXZ>Automated Reports allow for a simplified way of configuring reports to be run on a scheduled and recurring basis, and to have the results sent by email or uploaded to an FTP server.</QXZ></B>
